deployment_be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend-app
        image: kaedmond24/ecommerce-d9-be:latest
        ports:
        - name: rest-api
          containerPort: 8000
