service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: NodePort
  selector:
    app: frontend-app
  ports:
  - port: 80
    targetPort: http

---
apiVersion: v1
kind: Service
metadata:
  name: backendservice
spec:
  selector:
    app: backend-app
  ports:
  - port: 8000
    targetPort: rest-api
